[package]
name = "f2ufs"
version = "0.1.0"
authors = ["Wangweizhen <hawking.rei@gmail.com>"]
edition = "2018"

[features]
default = []
failpoints = ["fail", "rand"]

[dependencies]
spin = "0.4.9"
zstd = "0.4.21+zstd.1.3.7"
fail = { version = "0.2", optional = true }
rand = { version = "0.6", optional = true }