[package]
name = "f2ufs"
version = "0.1.0"
authors = ["Wangweizhen <hawking.rei@gmail.com>"]
edition = "2018"
build = "build.rs"

[features]
default = []
failpoints = ["fail", "rand"]

[dependencies]
lz4 = "1.23.1"
bytes = "0.4.11"
fail = { version = "0.2", optional = true }
hashbrown = {version = "0.1.7", features = ["serde"]}
indexmap = { version = "1.0.2", features = ["serde-1"] }
rand = { version = "0.6", optional = true }
spin = "0.4.9"
zstd = "0.4.21+zstd.1.3.7"
log = { version = "0.4.6", features = ["release_max_level_info"] }
serde = "1.0.81"
serde_derive = "1.0.81"
serde_json = { version = "1.0.33", optional = true }
rmp-serde = "0.13.7"
env_logger = "0.6.0"
crossbeam = "0.6.0"

[dependencies.linked-hash-map]
version = "0.5.1"
features = ["serde_impl"]

[build-dependencies]
pkg-config = "0.3.14"

[dev-dependencies]
tempdir = "0.3.7"
rand = "0.6"
rand_xorshift = "0.1.0"